--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.eliminado {
+  color: rgba(255,255,255,.7);
+  background: #d40000;
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+}
+
+.container{
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 5px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
